--- a/style.css
+++ b/style.css
@@ -1,51 +1,56 @@
-
-body{
+body {
     background-color: #000000;
     user-select: none;
-     font-family: "Montserrat", sans-serif;
+    font-family: "Montserrat", sans-serif;
 }
 
 
 
-.all{
-display: flex;
-flex-direction: column;
-align-items: center;
-margin-top:200px;
-color:white;
+.all {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center; 
+    height: 100vh;           /* займає всю висоту екрана */
+    color: white;
 }
 
-.question{
-    font-size:100px;
+
+.question {
+    font-size: 100px;
     text-align: center;
-}
-.answers{
-          display: flex;
-}
-.answer{
-border: 2px solid rgb(255, 255, 255);
-padding: 10px 20px 10px 20px;
-font-size: 30px;
-margin: 20px;
-    transition: all 0.2s ease-in-out;
-border-radius: 10px;
+
 }
 
-.answer:hover{
-    scale:1.3;
+.answers {
+    display: flex;
+}
+
+.answer {
+    border: 2px solid rgb(255, 255, 255);
+    padding: 10px 20px 10px 20px;
+    font-size: 30px;
+    margin: 20px;
+    transition: all 0.2s ease-in-out;
+    border-radius: 10px;
+}
+
+.answer:hover {
+    scale: 1.3;
     transition: all 0.2s ease-in-out;
     cursor: pointer;
 }
 
-.data{
-    position: absolute;
-    top:430px;
+.data {
+
     text-align: center;
     display: flex;
     flex-direction: row;
 }
 
-.cor,.incor,.prec{
+.cor,
+.incor,
+.prec {
     font-size: 30px;
     border-radius: 10px;
     padding: 1px;
@@ -55,85 +60,120 @@ border-radius: 10px;
     opacity: 0.65;
 }
 
-.cor:hover,.incor:hover,.prec:hover{
-    scale:1.2;
+.cor:hover,
+.incor:hover,
+.prec:hover {
+    scale: 1.2;
     transition: all 0.2s ease-in-out;
     opacity: 1;
 }
 
-.cor{
-background-color: rgb(99, 234, 99);
+.cor {
+    background-color: rgb(99, 234, 99);
 }
-.incor{
-background-color: red;
+
+.incor {
+    background-color: red;
 }
-.prec{
-background-color: gray;
+
+.prec {
+    background-color: gray;
 }
 
 
-.difficulty{
+.difficulty {
     position: absolute;
-    top:0px;
-    left:0px;
-border: 2px solid rgb(255, 255, 255);
-padding: 10px 20px 10px 20px;
-border-radius: 10px;
-margin: 20px;
-transition: all 0.2s ease-in-out;
+    top: 0px;
+    left: 0px;
+    border: 2px solid rgb(255, 255, 255);
+    padding: 10px 20px 10px 20px;
+    border-radius: 10px;
+    margin: 20px;
+    transition: all 0.2s ease-in-out;
 }
-.difficulty:hover{
+
+.difficulty:hover {
     cursor: pointer;
-    scale:1.2;
+    scale: 1.2;
     transition: all 0.2s ease-in-out;
     border: 2px solid rgb(0, 0, 0);
     color: rgb(0, 0, 0);
     background-color: rgb(255, 255, 255);
 }
 
-.edit,.edit2{
+.edit,
+.edit2 {
     position: absolute;
     display: flex;
     flex-direction: row;
     margin: 20px;
     scale: 0;
 
-    
-}
-.edit{
-top:-20px;
-left:0px;
+
 }
 
-.edit2{
-top:20px;
-    left:0px;
+.edit {
+    top: -20px;
+    left: 0px;
 }
 
-.an10,.an1,.acmax,.a1,.a10,.bn10,.bn1,.bcmin,.b1,.b10{
-   border: 2px solid rgb(255, 255, 255);
-padding: 10px 20px 10px 20px;
-font-size: 30px;
-margin: 10px;
- width: 125px;
- transition: all 0.2s ease-in-out;
-border-radius: 10px; 
-text-align: center;
+.edit2 {
+    top: 20px;
+    left: 0px;
 }
 
-.acmax,.bcmin{
- width: 125px;
+.an10,
+.an1,
+.acmax,
+.a1,
+.a10,
+.bn10,
+.bn1,
+.bcmin,
+.b1,
+.b10 {
+    border: 2px solid rgb(255, 255, 255);
+    padding: 10px 20px 10px 20px;
+    font-size: 30px;
+    margin: 10px;
+    width: 125px;
+    transition: all 0.2s ease-in-out;
+    border-radius: 10px;
+    text-align: center;
 }
 
-.an10,.an1,.a1,.a10,.bn10,.bn1,.b1,.b10{
- width: 45px;
+.acmax,
+.bcmin {
+    width: 125px;
+}
+
+.an10,
+.an1,
+.a1,
+.a10,
+.bn10,
+.bn1,
+.b1,
+.b10 {
+    width: 45px;
 }
 
 
-.an10:hover,.an1:hover,.acmax:hover,.a1:hover,.a10:hover,.bn10:hover,.bn1:hover,.bcmin:hover,.b1:hover,.b10:hover{
+.an10:hover,
+.an1:hover,
+.acmax:hover,
+.a1:hover,
+.a10:hover,
+.bn10:hover,
+.bn1:hover,
+.bcmin:hover,
+.b1:hover,
+.b10:hover {
     border: 2px solid rgb(0, 0, 0);
     color: rgb(0, 0, 0);
     background-color: rgb(255, 255, 255);
     cursor: pointer;
     scale: 1.2;
 }
+
+.
